cmake_minimum_required(VERSION 3.10)
project(misc)

set(CMAKE_CXX_STANDARD 11)

add_executable(misc
        poj_1004.cpp
        poj_1003.cpp
        poj_1207.cpp
        poj_1316.cpp
        poj_2017.cpp
        poj_1953.cpp
        poj_1046.cpp
        poj_2785.cpp
        poj_2785_B.cpp
        poj_1753.cpp
        poj_1014.cpp
        poj_1014_B.cpp
        poj_1014_C.cpp
        poj_2255.cpp
        poj_1579.cpp
        poj_2081.cpp
        poj_1953_B.cpp
        poj_1458.cpp poj_2250.cpp poj_1159.cpp poj_1159_B.cpp)
